<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">New</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout" tools:ignore="ExtraTranslation">Đăng xuất</string>

    <string name="loggin_user">Tên đăng nhập</string>
    <string name="loggin_pass">Mật khẩu</string>
    <string name="tvQuenMK">Quên mật khẩu</string>
    <string name="tvDky">Đăng ký</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="sigup">Đăng ký</string>
    <string name="intro">Chưa có tài khoản?</string>
    <string name="btn_SignIn">Đăng ký</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_menu_dashboard">Thống kê</string>
    <string name="nav_menu_call">Cuộc gọi</string>
    <string name="nav_menu_ticket">Ticket</string>
    <string name="nav_menu_sale">Sale</string>
    <string name="nav_menu_customer">Khách hàng</string>
    <string name="nav_menu_staff">Nhân viên</string>

    <string name="tvTenKH">Tên</string>
    <string name="tvSdt">Số điện thoại</string>
    <string name="tvEmail">Email</string>
    <string name="frg_result_search">Data</string>
    <string name="dialog_addCall">Bạn có muốn thêm cuộc gọi</string>
    <string name="dialog_btn_ok">Đồng ý</string>
    <string name="dialog_btn_no">Không</string>
    <string name="dialog_rs_search">Bạn có muốn thêm cuộc gọi</string>
    <string name="act_add_phone">Số điện thoại</string>
    <string name="act_add_edt_phone">Số điện thoại</string>
    <string name="act_add_edt_name">Tên</string>
    <string name="act_add_edt_email">Email</string>
    <string name="act_add_edt_zalo">Zalo</string>
    <string name="act_add_edt_skype">Skype</string>
    <string name="tv_city">Thành phố:</string>
    <string name="act_add_edt_address">Địa chỉ</string>
    <string name="act_add_edt_dateOfBirth">Ngày sinh</string>
    <string name="tv_soft_ware_care">Phần mềm quan tâm</string>
    <string name="tv_obj_customer">Đối tượng khách hàng</string>
    <string name="act_add_edt_source_customer">Nguồn khách</string>
    <string name="tv_customer_type">Loại khách hàng</string>
    <string name="act_add_edt_content">Nội dung</string>
    <string name="tv_customer_status">Trạng thái khách hàng</string>
    <string name="act_add_note">Ghi chú</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_calcel">Hủy</string>
    <string name="fragment_listCall_search">Tìm kiếm</string>
    <string name="dialog_tb_ok">Thành công</string>
    <string name="tv_source_customer">Nguồn khách hàng</string>
    <string name="act_add_layout_do_not_leave_blank">Không được để trống</string>
    <string name="act_add_actionbar">Thêm cuộc gọi và khách hàng mới</string>
    <string name="frg_list_call_date_start">Ngày bắt đầu</string>
    <string name="frg_list_call_date_end">Ngày kết thúc</string>
    <string name="frg_list_call_btn_show">Chọn</string>
    <string name="frg_list_call_btn_filter">Lọc</string>
    <string name="no_data_entered">Không có dữ liệu</string>
    <string name="no_data_in_this_time">Không có cuộc gọi trong thời gian này</string>
    <string name="frg_remind_btn_add">Thêm nhắc nhở</string>
    <string name="dialog_addRemind">Thêm nhắc nhở</string>
    <string name="dialog_search_customer">Tìm kiếm khách hàng</string>
    <string name="dialog_reminder_date">Ngày nhắc nhở</string>
    <string name="tv_change_date">Date</string>
    <string name="dialog_tv_search">Tìm kiếm</string>
    <string name="dialog_btn_cancel">Hủy</string>
    <string name="number">2</string>
    <string name="oldCustomer">Khách hàng cũ</string>
    <string name="newCustomer">Khách hàng mới</string>
    <string name="tkcall">Thống kê cuộc gọi</string>
    <string name="tkbanthan">All</string>
    <string name="thongKeCuocGoiBanThan">Thống kê cuộc gọi bản thân</string>
    <string name="Dashboard_inCall_All">Số cuộc gọi</string>
    <string name="Dashboard_inCall_Old">Khách hàng cũ</string>
    <string name="Dashboard_inCall_New">Khách hàng mới</string>
    <string name="textview">TextView</string>
    <string name="thongKeTheoTatCaDoHaiLongCuaKhachHang">Thống kê theo tất cả độ hài lòng của khách</string>
    <string name="thongKeTheoDoHaiLongCuaKhachHang">Thống kê theo độ hài lòng của khách</string>
    <string name="thongKeCuocGoi">Thống kê cuộc gọi</string>
    <string name="thongKeTheoNhanVien">Thống kê cuộc gọi theo nhân viên</string>
    <string name="act_addCall">Thêm cuộc gọi</string>
    <string name="personnel_name">Ten nhan vien</string>
    <string name="SoCuocGoi">So cuoc goi</string>
    <string name="KHcu">Khach hang cu</string>
    <string name="KHmoi">Khach hang moi</string>
    <string name="blank">_________</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleInf">Thông tin</string>
    <string name="titleAll">Thống kê</string>
    <string name="loc">Lọc</string>
    <string name="frg_danh_sach_da_xoa">Danh sách đã xóa</string>
    <string name="frg_ds_themKey">Thêm key</string>
    <string name="tk_ticket">Thống kê Ticket</string>
    <string name="tl_ticket_done">Hoàn thành</string>
    <string name="frg_ticket_chuaxuly">Chưa xử lý</string>
    <string name="frg_ticket_dangxuly">Đang xử lý</string>
    <string name="tk_kh_danhgia_ticket">Thống kê khách hàng đánh giá Ticket</string>
    <string name="rat_hai_long">Rất hài lòng</string>
    <string name="haiLong">Hài lòng</string>
    <string name="tamDuoc">Tạm được</string>
    <string name="binhthuong">Bình thường</string>
    <string name="te">Tệ</string>
    <string name="ratTe">Rất tệ</string>
    <string name="themKey">Thêm key</string>
    <string name="themTicket">Thêm ticket</string>
    <string name="tenNH">Tên ngân hàng</string>
    <string name="tenTK">Tên tài khoản</string>
    <string name="maTK">Mã tài khoản</string>
    <string name="tenNV">Tên NV</string>
    <string name="haicham">:</string>
    <string name="staff">Nhân viên</string>
    <string name="nav_menu_product">Sản Phẩm</string>
    <string name="nav_menu_system">Hệ thống</string>
    <string name="cacCuocGoiVoiKH">Các cuộc gọi với khách hàng</string>
    <string name="selectDate">Select Date:</string>
    <string name="selectTime">Select Time:</string>
    <string name="taoNhacNho">Tạo nhắc nhở</string>
    <string name="nav_menu_logout">Đăng xuất</string>
    <string name="logout">Bạn có muốn đăng xuất</string>
    <string name="act_addNewTicket">Thêm Ticket</string>


</resources>
