<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ThongKe"
            android:icon="@drawable/ic_action_dashboard"
            android:title="@string/nav_menu_dashboard" />
        <item
            android:id="@+id/nav_CuocGoi"
            android:icon="@drawable/ic_action_phone"
            android:title="@string/nav_menu_call" />
        <item
            android:id="@+id/nav_Ticket"
            android:icon="@drawable/ic_action_ticket"
            android:title="@string/nav_menu_ticket" />
        <item
            android:id="@+id/nav_Sale"
            android:icon="@drawable/ic_action_sale"
            android:title="@string/nav_menu_sale" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/nav_menu_customer" />

        <item
            android:id="@+id/nav_Staff"
            android:icon="@drawable/account_staff"
            android:title="@string/nav_menu_staff" />

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/product"
            android:title="@string/nav_menu_product"/>

        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/settings_outline"
            android:title="@string/nav_menu_system"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/lock"
            android:title="@string/nav_menu_logout"/>

    </group>



</menu>
