<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ThongKe">

    <fragment
        android:id="@+id/nav_ThongKe"
        android:name="com.example.anew.ui.dashboard.DashboardFragment"
        android:label="@string/nav_menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_CuocGoi"
        android:name="com.example.anew.ui.call.CallFragment"
        android:label="@string/nav_menu_call"
        tools:layout="@layout/fragment_call" />

    <fragment
        android:id="@+id/nav_Ticket"
        android:name="com.example.anew.ui.ticket.TicketFragment"
        android:label="@string/nav_menu_ticket"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_Sale"
        android:name="com.example.anew.ui.sale.SaleFragment"
        android:label="@string/nav_menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.anew.ui.customer.CustomerFragment"
        android:label="@string/nav_menu_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.anew.ui.product.ProductFragment"
        android:label="@string/nav_menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_system"
        android:name="com.example.anew.ui.system.SystemFragment"
        android:label="@string/nav_menu_system"
        tools:layout="@layout/fragment_system" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.anew.ui.logout"
        android:label="@string/action_logout"
        tools:layout="@layout/fragment_logout" />


</navigation>