<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvEmailTkNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvEmail"
            app:layout_constraintStart_toStartOf="@+id/imageView35"
            app:layout_constraintTop_toBottomOf="@+id/imageView35" />

        <TextView
            android:id="@+id/tvNameTkNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tenNV"
            app:layout_constraintStart_toEndOf="@+id/imageView35"
            app:layout_constraintTop_toTopOf="@+id/imageView35" />

        <TextView
            android:id="@+id/tvSoCuocGoiTkNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/SoCuocGoi"
            app:layout_constraintBottom_toBottomOf="@+id/imageView35"
            app:layout_constraintStart_toEndOf="@+id/imageView35" />

        <TextView
            android:id="@+id/tvKHCuTkNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KHcu"
            app:layout_constraintStart_toStartOf="@+id/tvKHMoiTkNV"
            app:layout_constraintTop_toTopOf="@+id/tvNameTkNV" />

        <TextView
            android:id="@+id/tvKHMoiTkNV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/KHmoi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvKHCuTkNV" />

        <ImageView
            android:id="@+id/imageView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_circle_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>