<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView59">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_add_edt_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textColor="@color/P_Accent"
        android:textSize="19sp"
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/taoNhacNho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selectDate"
        app:layout_constraintStart_toStartOf="@+id/tvSelectDate"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/selectTime"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

    <TextView
        android:id="@+id/tvDateC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tvSelectDate"
        app:layout_constraintTop_toTopOf="@+id/tvSelectDate" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvDateC"
        app:layout_constraintTop_toTopOf="@+id/tvSelectTime" />

    <TextView
        android:textSize="19sp"
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dialog_btn_cancel"
        android:textColor="@color/P_Accent"
        app:layout_constraintEnd_toStartOf="@+id/tvSave"
        app:layout_constraintTop_toTopOf="@+id/tvSave" />

    <TextView
        android:textSize="19sp"
        android:textColor="@color/P_Accent"
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectTime" />
</androidx.constraintlayout.widget.ConstraintLayout>