<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/frg_list_call_date_start"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tvDateEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/frg_list_call_date_end"
            android:padding="8dp" />
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_filer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_login"
            android:text="@string/frg_list_call_btn_filter" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>