<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddCallActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="italic"
            android:id="@+id/tvRsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/tvRsName"
            app:layout_constraintStart_toEndOf="@+id/tvRsName"
            app:layout_constraintTop_toTopOf="@+id/tvRsName" />

        <TextView
            android:id="@+id/tvRsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/tvSearchCu"
            app:layout_constraintStart_toEndOf="@+id/tvSearchCu"
            app:layout_constraintTop_toTopOf="@+id/tvSearchCu" />

        <TextView
            android:id="@+id/tvSearchCu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tv_search"
            app:layout_constraintBottom_toBottomOf="@+id/layoutPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPhone" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ABC"
                android:textSize="24sp"></TextView>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutName"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutZalo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEmail"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_zalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_zalo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutZalo"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_skype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_skype" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_city"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSkype"></TextView>

        <Spinner
            android:id="@+id/layoutCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city"></Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCity"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginStart="5dp"
            android:textSize="17sp"
            android:id="@+id/edt_date_of_birth"
            android:hint="@string/act_add_edt_dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAddress"
            tools:layout_editor_absoluteY="56dp"/>

        <TextView
            android:id="@+id/tv_soft_ware_care"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_soft_ware_care"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_date_of_birth"></TextView>

        <Spinner
            android:id="@+id/layoutSoftWareCare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_soft_ware_care"></Spinner>

        <TextView
            android:id="@+id/tv_obj_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_obj_customer"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSoftWareCare"></TextView>

        <Spinner
            android:id="@+id/layoutObjCustome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_obj_customer"></Spinner>

        <TextView
            android:id="@+id/tv_source_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_source_customer"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutObjCustome"></TextView>

        <Spinner
            android:id="@+id/layoutSourceCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_source_customer"></Spinner>

        <TextView
            android:id="@+id/tv_customer_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_customer_type"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSourceCustomer"></TextView>

        <Spinner
            android:id="@+id/layoutCustomerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_type"></Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCustomerType"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_edt_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_customer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_customer_status"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutContent"></TextView>

        <Spinner
            android:id="@+id/layoutCustomerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_status"></Spinner>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCustomerStatus"
            tools:layout_editor_absoluteY="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_add_note" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutNote"
            tools:ignore="MissingConstraints">
            <Button
                android:id="@+id/btnCancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_login"
                android:text="@string/btn_calcel" />

            <Button
                android:layout_marginLeft="8dp"
                android:id="@+id/btnSave"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_login"
                android:text="@string/btn_save" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>